objects/Loyalty_Points__c.object
<CustomObject>
    <description>This object will be used to capture available loyalty points.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loyalty Points</relationshipLabel>
        <relationshipName>Loyalty_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_Points__c</fullName>
        <label>Available Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiring_Points_On__c</fullName>
        <label>Expiring On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiring_Points__c</fullName>
        <label>Expiring Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Loyalty Points</label>
    <nameField>
        <label>Loyalty Points</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>